--- a/src/my-app.html
+++ b/src/my-app.html
@@ -36,10 +36,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --app-secondary-color: black;
       }
 
+      app-header-layout {
+        background-color: #f5f5f5;
+      }
+
       app-header {
         background-color: var(--app-primary-color);
         color: #fff;
       }
+
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
       }
