Some more futzing with colors and styles.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <title>My App</title>
+  <title>Dashboard Demo Polymer</title>
 
   <link rel="shortcut icon" sizes="32x32" href="/images/app-icon-32.png">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
@@ -51,14 +52,54 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <link rel="import" href="/src/my-app.html">
 
-  <style>
+  <style is="custom-style">
+
+    :root {
+      /* Colors used in app */
+      --chart-blue: #3090f0
+      --chart-orange: #f09042;
+      --chart-red: #ec6464;
+      --chart-cyan: #18ddbb;
+      --chart-green: #98df58;
+      --chart-yellow: #f9dd51;
+
+      --app-light-grey: #d8d8d8;
+      --app-lighter-grey: #f5f5f5;
+      --app-lightest-grey: #fafafa;
+
+      --app-medium-grey: #9ca5af;
+
+      --app-dark-grey: #414b56;
+      --app-darker-grey: #3a434d;
+      --app-darkest-grey: #141414;
+
+      /* Only for the notepad panel */
+      --app-note-yellow: #fffdf2;
+      --app-note-text: #545145;
+
+      /* For highlighting important dangerous stuff */
+      --app-error-red: #ed473b;
+
+      /* Background for the app as a whole */
+      --app-background-color: var(--app-lightest-grey);
+
+      /* Main accent color */
+      --app-primary-color: var(--chart-blue);
+
+      --text-color-darkest: var(--app-darkest-grey); /* For light backgrounds */
+      --text-color-lightest: #ffffff; /* For dark backgrounds */
+
+      /* Modified light theme */
+      --panel-background-color: #ffffff;
+      --panel-text-color: var(--text-color-darkest);
+    }
 
     body {
+      background-color: var(--app-background-color);
       margin: 0;
-      font-family: 'Roboto', 'Noto', sans-serif;
+      font-family: 'Open Sans', sans-serif;
       line-height: 1.5;
       min-height: 100vh;
-      background-color: #eee;
     }
 
   </style>
