--- a/src/my-app.html
+++ b/src/my-app.html
@@ -24,10 +24,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-iconset-svg/iron-iconset-svg.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
 
-<link rel="import" href="../bower_components/paper-styles/default-theme.html">
-<link rel="import" href="../bower_components/paper-styles/typography.html">
-
-
 <dom-module id="my-app">
 
   <template>
@@ -41,6 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --sidebar-secondary-color: var(--app-medium-grey);  /* for secondary text and icons */
 
         display: block;
+        box-sizing: border-box;
 
       }
 
