--- a/src/my-app.html
+++ b/src/my-app.html
@@ -162,7 +162,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'view1';
+        this.page = page || 'dashboard';
       },
 
       _pageChanged: function(page) {
